Fixed horizontal scroll on customer section

--- a/resources/sass/theme/_sections.scss
+++ b/resources/sass/theme/_sections.scss
@@ -39,7 +39,11 @@
   padding-top: 40px;
   padding-bottom: 40px;
   text-align: center;
-  margin-bottom: 30px;
+
+  .row {
+    margin-right: 0;
+    margin-left: 0;
+  }
 
   img {
     height: 50px;
